--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
     <!-- Sweet Alert V10.13.0 -->
     <script src="./js/sweetalert2.js"></script>
 
+
     <!-- General Styles -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/wow/animate.css">
+
+    <!-- Animate -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 </head>
 
@@ -177,52 +182,56 @@
 
     <hr>
 
-    <div class="container container-web-page">
-        <div class="row justify-content-md-center">
-            <div class="col-12 col-md-6">
-                <figure class="full-box">
-                    <img src="./assets/img/registration.png" alt="registration" class="img-fluid">
-                </figure>
-            </div>
+    <div class="container container-web-page" class="d-flex ">
 
+        <div class=" row justify-content-md-center ">
+            <div class="col-12 col-md-6 ">
+                <figure class="full-box ">
+                    <img src="./assets/img/registration.png " alt="registration " class="img-fluid ">
+
+                    <img src="/assets/img/modelo1sinbg.png " class="creativo "> </img>
+                </figure>
+
+
+            </div>
         </div>
-        <a href="https://api.whatsapp.com/send?phone=529842361584&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20el servicio%20a%20domicilio." class="float" target="_blank">
-            <i class="fa fa-whatsapp my-float"></i>
+        <a href="https://api.whatsapp.com/send?phone=529842361584&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20el servicio%20a%20domicilio. " class="float " target="_blank ">
+            <i class="fa fa-whatsapp my-float "></i>
         </a>
         <!-- Footer -->
-        <footer class="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-md-4">
-                        <ul class="list-unstyled">
+        <footer class="footer ">
+            <div class="container ">
+                <div class="row ">
+                    <div class="col-12 col-md-4 ">
+                        <ul class="list-unstyled ">
                             <li>
-                                <h5 class="font-weight-bold"><i class="far fa-copyright"></i> Perrillos 2022</h5>
+                                <h5 class="font-weight-bold "><i class="far fa-copyright "></i> Perrillos 2022</h5>
                             </li>
                             <li> Todos los derechos reservados </li>
                         </ul>
                     </div>
-                    <div class="col-12 col-md-4">
-                        <ul class="list-unstyled">
+                    <div class="col-12 col-md-4 ">
+                        <ul class="list-unstyled ">
                             <li>
-                                <h5 class="font-weight-bold">CDMX</h5>
+                                <h5 class="font-weight-bold ">CDMX</h5>
                             </li>
-                            <li><i class="fas fa-map-marker-alt fa-fw"></i>San Rafael Atlixco 13400 Tlaltenco Tlahuac</li>
+                            <li><i class="fas fa-map-marker-alt fa-fw "></i>San Rafael Atlixco 13400 Tlaltenco Tlahuac</li>
                         </ul>
                     </div>
-                    <div class="col-12 col-md-4">
-                        <ul class="list-unstyled">
+                    <div class="col-12 col-md-4 ">
+                        <ul class="list-unstyled ">
                             <li>
-                                <h5 class="font-weight-bold">Siguenos en:</h5>
+                                <h5 class="font-weight-bold ">Siguenos en:</h5>
                             </li>
                             <li>
-                                <a href="https://www.facebook.com/PerrillosBirriaMichoacana/" class="footer-link" target="_blank">
-                                    <i class="fab fa-facebook fa-fw"></i> Facebook
+                                <a href="https://www.facebook.com/PerrillosBirriaMichoacana/ " class="footer-link " target="_blank ">
+                                    <i class="fab fa-facebook fa-fw "></i> Facebook
                                 </a>
                             </li>
 
                             <li>
-                                <a href="https://goo.gl/maps/P9Vt7VWwB8Wg8y7Y6" class="footer-link" target="_blank">
-                                    <i class="fas fa-map-marked-alt"></i> Como llegar
+                                <a href="https://goo.gl/maps/P9Vt7VWwB8Wg8y7Y6 " class="footer-link " target="_blank ">
+                                    <i class="fas fa-map-marked-alt "></i> Como llegar
                                 </a>
                             </li>
                         </ul>
@@ -230,13 +239,19 @@
                 </div>
             </div>
         </footer>
-
+        <!-- Wow scripts -->
+        <script src="/wow/wow.min.js "></script>
+        <script>
+            new WOW().init();
+        </script>
 
         <!-- MDBootstrap V5 -->
-        <script src="./js/mdb.min.js"></script>
+        <script src="./js/mdb.min.js "></script>
 
         <!-- General scripts -->
-        <script src="./js/main.js"></script>
+        <script src="./js/main.js "></script>
+
+
 </body>
 
 </html>
