--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
                     <img src="./assets/img/registration.png " alt="registration " class="img-fluid ">
 
                     <img src="/assets/img/modelo1sinbg.png " class="creativo "> </img>
+                    <span>Cantaritos!!</span>
                 </figure>
 
 
