--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,9 @@
                         <a href="gallery.html">Galería</a>
                     </li>
                     <li>
-                        <a href="tel:+529842361584">Telefono 984 236 1584</a>
+                        <i class="fas fa-phone-square-alt">
+                            <a href="tel:+529842361584">Telefono 984 236 1584</a>
+                            </i>
                     </li>
                 </ul>
             </nav>
