--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header class="header full-box bg-white">
         <div class="header-brand full-box">
             <a href="index.html">
-                <img src="./assets/img/logo.png" alt="Designlopers" class="img-fluid">
+
             </a>
         </div>
 
@@ -52,11 +52,12 @@
                         <a href="gallery.html">Galería</a>
                     </li>
                     <li>
-                        <a href="tel:+529842361584">Telefono 984 236 1584</a>
+                        <i class="fas fa-phone-square-alt">
+                            <a href="tel:+529842361584">Telefono 984 236 1584</a>
+                            </i>
                     </li>
                 </ul>
             </nav>
-
 
 
 
@@ -65,7 +66,6 @@
             </a>
         </div>
     </header>
-
 
     <!-- Content -->
     <div class="banner">
