--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header class="header full-box bg-white">
         <div class="header-brand full-box">
             <a href="index.html">
-
+                <img src="./assets/img/logo.png" alt="Designlopers" class="img-fluid">
             </a>
         </div>
 
@@ -240,8 +240,7 @@
                 </div>
             </div>
         </footer>
-        <!-- Wow scripts -->
-        <script src="/wow/wow.min.js "></script>
+
         <script>
             new WOW().init();
         </script>
@@ -251,6 +250,9 @@
 
         <!-- General scripts -->
         <script src="./js/main.js "></script>
+
+        <!-- Wow scripts -->
+        <script src="/wow/wow.min.js "></script>
 
 
 </body>
