--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <h5 class="text-center text-uppercase poppins-regular font-weight-bold">
                     Mexicana · Brunch · Desayunos</h5>
                 <p class="text-center">🤔🕘 Horario y días de servicio 🕕🛎 .</br>
-                    <hr>🌞 Viernes: 09:00 a 16:00 Hrs. 🌞 Sábado: 09:00 a 19:00 Hrs. 🌞 Domingo: 09:00 a 19:00 Hrs.</p>
+                    <hr>🌞 Viernes: 05:00pm a Media noche 🌗 🌞 Sábado: 10:00am a 06:00pm Hrs. 🌞 Domingo: 09:00am a 06:00pm.</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4">
                 <p class="text-center"><i class="fas fa-store-alt fa-5x"></i></p>
